Fix card spacing if only headline

--- a/src/styles/components/_card.scss
+++ b/src/styles/components/_card.scss
@@ -32,6 +32,13 @@
     border-radius: $border-radius;
     background-color: $white--dark;
     z-index: 9;
+
+    .u-heading {
+        @include last(1) {
+            margin-bottom: 0;
+            text-align: center;
+        }
+    }
 }
 
 .c-card__link {
